<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:autofillHints=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/salario"
            android:hint="@string/salario"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salario_mensal"
            app:layout_constraintTop_toBottomOf="@id/salario"
            app:layout_constraintStart_toStartOf="parent"/>


        <EditText
            android:id="@+id/gastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/gastos"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salario" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gastos_totais"
            app:layout_constraintTop_toBottomOf="@id/gastos"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text_imposto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imposto_de_renda"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gastos"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:layout_marginTop="50dp"
            >
        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dinheiroview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_imposto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_chainStyle="packed"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/RS"
                android:textSize="80sp"
                android:text="@string/Reais"
                android:textAlignment="center"
                android:textColor="@color/blue"
                >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/RS"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:id="@+id/total_imposto"
                android:textSize="80sp"
                android:text="@string/total_imposto"
                android:textAlignment="center"
                android:textColor="@color/blue"
                >
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/botao_calculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dinheiroview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            android:text="@string/calcular">
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
